// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TopNotification /> Rendering Should match snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "position": "absolute",
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    nativeID="animatedComponent"
    style={
      Object {
        "backgroundColor": "#313131",
        "bottom": 0,
        "height": 0,
        "justifyContent": "flex-end",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": "100%",
        "zIndex": 1000,
      }
    }
  >
    <Text
      collapsable={false}
      nativeID="animatedComponent"
      numberOfLines={1}
      style={
        Object {
          "color": "#ffffff",
          "fontFamily": "DIN2014Narrow-Regular",
          "fontSize": 13,
          "letterSpacing": 0.4,
          "opacity": 0,
          "paddingBottom": 7.444196428571429,
          "paddingHorizontal": 36.231884057971016,
          "textAlign": "center",
        }
      }
    >
      Test message
    </Text>
  </View>
</View>
`;

exports[`<TopNotification /> Rendering Should not show notification without message content 1`] = `
<View
  style={
    Array [
      Object {
        "position": "absolute",
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    nativeID="animatedComponent"
    style={
      Object {
        "backgroundColor": "#313131",
        "bottom": 0,
        "height": 0,
        "justifyContent": "flex-end",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": "100%",
        "zIndex": 1000,
      }
    }
  >
    <Text
      collapsable={false}
      nativeID="animatedComponent"
      numberOfLines={1}
      style={
        Object {
          "color": "#ffffff",
          "fontFamily": "DIN2014Narrow-Regular",
          "fontSize": 13,
          "letterSpacing": 0.4,
          "opacity": 0,
          "paddingBottom": 7.444196428571429,
          "paddingHorizontal": 36.231884057971016,
          "textAlign": "center",
        }
      }
    >
      
    </Text>
  </View>
</View>
`;
